--- a/netmanga_website/netmanga_website/templates/search.html
+++ b/netmanga_website/netmanga_website/templates/search.html
@@ -34,7 +34,7 @@
                                                             {{manga_info.manga.title}}
                                                         </div>
                                                         <div class="latest-chapter">
-                                                            <h6>{{manga_info.latest_chapter.no}} Chapters</h6>
+                                                            <h6>{{manga_info.latest_chapter.no}} Chapter{{manga_info.latest_chapter.no|pluralize:",s"}}</h6>
                                                             <h6>Latest upload on: {{manga_info.latest_chapter.published | date:"d.m.Y"}}</h6>
                                                         </div>
                                                     </div>
@@ -83,7 +83,7 @@
                                         </div>
                                         <div class="performance-wrap">
                                             <div class="chapter-views-view">
-                                                {{chapter_info.views}} Views
+                                                {{chapter_info.chapter.views}} View{{chapter_info.chapter.views|pluralize:",s"}}
                                             </div>
                                             <div class="chapter-ratings-view">
                                                 <i class="fa fa-thumbs-up">
