--- a/netmanga_website/netmanga_website/templates/search.html
+++ b/netmanga_website/netmanga_website/templates/search.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %} NETMANGA - The official Homepage of NetManga {% endblock %}
+{% block title %} NETMANGA - Read Mangas and Comics Online {% endblock %}
 
 {% block content %}
 {% if manga_infos|length == 0 and chapter_infos|length == 0 %}
