--- a/netmanga_website/netmanga_website/templates/accounts/buy_coins.html
+++ b/netmanga_website/netmanga_website/templates/accounts/buy_coins.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %} NETMANGA {% endblock %}
+{% block title %} Coins :: NETMANGA {% endblock %}
 
 {% block content %}
 <div class="coins-header-section">
