--- a/netmanga_website/netmanga_website/templates/index.html
+++ b/netmanga_website/netmanga_website/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %} NETMANGA - The official Homepage of NetManga {% endblock %}
+{% block title %} NETMANGA - Read Mangas and Comics online {% endblock %}
 
 {% block content %}
 <!--
