--- a/netmanga_website/static/css/main.css
+++ b/netmanga_website/static/css/main.css
@@ -67,6 +67,15 @@ textarea {
   padding:20px;
 }
 
+.withdraw {
+  position: relative;
+  width: 500px;
+  height: 500px;
+  background-color:#fff;
+  border-radius: 5px;
+  padding:20px;
+}
+
 .close {
   position: absolute;
   top: 0;
@@ -4862,4 +4871,121 @@ p a:hover {
 #image-count-alert .alert-text{
   padding-top: 15px;
   padding-bottom: 15px;
+}
+
+.withdraw-order-section{
+  margin-top: 100px;
+  margin-bottom: 100px;
+  margin-right: 100px;
+  margin-left: 100px;
+}
+
+.withdraw-order-section h5{
+  margin-left: 0px;
+  margin-right: auto;
+  text-align: left;
+}
+
+.withdrawal-dates{
+  color: #c5c5c5;
+  font-size: 15px;
+  font-weight: 500;
+  position: relative;
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 5px;
+  display: table;
+  white-space: nowrap;
+  letter-spacing: .6px;
+}
+
+.withdrawal-dates span{
+  padding-left: 1em;
+  padding-right: 1em;
+  display: inline-block;
+}
+
+.withdrawal-dates:after, .withdrawal-dates:before{
+  content: "";
+  display: table-cell;
+  border-top: 1px solid #c5c5c5;
+  position: relative;
+  top: 0.55em;
+  width: 50%;
+}
+
+.withdraw-order-list{
+  grid-template-columns: 1fr;
+  grid-column-gap: 40px;
+  grid-row-gap: 10px;
+  display: grid;
+  grid-template-rows: repeat(auto-fill,50px);
+  justify-content:center;
+  min-width: 0;
+  max-width: 750px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+.withdraw-card {
+  grid-template-columns: 70px auto 125px;
+  min-width: 300px;
+  width: 100%;
+  backface-visibility: hidden;
+  border-radius: 3px;
+  box-shadow: 0 2px 3px rgb(49 54 68 / 5%), 0 2.5px 10px rgb(49 54 68 / 8%);
+  display:inline-grid;
+  height: 70px;
+  overflow: hidden;
+  position: relative;
+  text-align: left;
+  transition: box-shadow .6s ease;
+  cursor: pointer;
+  background-color: #f5f5f5;
+  text-decoration: none;
+  color: #000;
+}
+
+.withdraw-card:hover {
+  color: #000;
+}
+
+.withdraw-card .withdraw-status {
+  padding-top: 17.5px;
+  padding-left: 17.5px;
+}
+
+.withdraw-card .withdraw-info {
+  padding-top: 10px;
+  padding-left: 10px;
+  overflow: hidden;
+}
+
+.withdraw-card .withdraw-info .withdraw-receiver {
+  font-size: 12px;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  white-space: nowrap;
+  font-weight: 500;
+}
+
+.withdraw-card .withdraw-info .order-time {
+  float: left;
+  width: 100%;
+  height: 50%;
+  font-weight: 500;
+}
+
+.withdraw-card .withdraw-amount {
+  padding-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.withdraw-card .withdraw-status i {
+  font-size: 40px;
 }
